# gpu-cosplay

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
docker/: Dockerfile  entrypoint.sh  gpu_cosplay_apply.py  gpu_cosplay_inject.py  gpu_cosplay_runtime.pth  gpu_cosplay_runtime.py  gpu_cosplay_verify.py  nvidia-smi
examples/: bench.py
gpu_cosplay/: __init__.py  apply.py  cards.py  cli.py  host.py  inject.py  plan.py  ssh.py  state.py
gpu_cosplay/data/: gpus.yaml
tests/: test_apply_helpers.py  test_cards.py  test_host_parsing.py  test_plan.py  test_session_compat.py  test_state.py
